About page toolbelt skill set spacing fix on mobile

--- a/src/assets/less/about.less
+++ b/src/assets/less/about.less
@@ -206,7 +206,7 @@
             display: flex;
             flex-wrap: wrap;
             align-items: center;
-            justify-content: center;
+            justify-content: space-around;
             /* 48px - 64px */
             gap: clamp(3rem, 6vw, 4rem);
         }
@@ -389,7 +389,7 @@
     }
 }
 
-// Footer links fi
+// Footer links fix
 #cs-footer-107 {
     .cs-li {
         padding-left: 2rem;
